[metadata]
name = pytest_pytorch
platforms = any
description = pytest plugin for a better developer experience when working with the PyTorch test suite
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pytest, plugin, pytorch, torch
url = https://github.com/Quansight/pytest-pytorch
author = Philip Meier
author_email = pmeier@quansight.com
license = BSD-3-Clause
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
project_urls =
    Source = https://github.com/Quansight/pytest-pytorch
    Documentation = https://github.com/Quansight/pytest-pytorch
    Tracker = https://github.com/Quansight/pytest-pytorch/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    pytest
    torch

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
pytest11 =
    pytest_pytorch=pytest_pytorch.plugin
